--- a/data/stories.yml
+++ b/data/stories.yml
@@ -9,84 +9,37 @@ stories:
 - story: find restaurant
   steps:
     - intent: find_restaurants
-    - action: utter_ask_city
-    - intent: inform
-      entities:
-        - city: Berkeley
-    - action: utter_ask_cuisine
-    - intent: inform
-      entities:
-        - cuisine: American
     - action: utter_show_restaurant
 
-- story: reserve restaurant
+- story: reserve retaurant
   steps:
-    - intent: reserve_restaurant
-      entities:
-        - restaurant_name: Golden Wok
-    - action: utter_ask_time
-    - intent: inform
-      entities:
-        - time: six pm
-    - action: utter_ask_date
-    - intent: inform
-      entities:
-        - date: 12th
-    - action: utter_confirm_reservation_data
-    - intent: confirm
-    - action: utter_confirm_reservation
-
-- story: interactive_story_1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: find_restaurants
-  - action: utter_ask_city
-  - intent: inform
-    entities:
-    - city: Palo Alto
-  - slot_was_set:
-    - city: Palo Alto
-  - action: utter_ask_cuisine
-  - intent: inform
-    entities:
-    - cuisine: spanish
-  - slot_was_set:
-    - cuisine: spanish
-  - action: utter_show_restaurant
   - intent: reserve_restaurant
     entities:
-    - restaurant_name: Golden Wok
+    - restaurant_name: Atlantic
   - slot_was_set:
-    - restaurant_name: Golden Wok
-  - action: utter_ask_time
+    - restaurant_name: Atlantic
+  - action: action_get_infos
   - intent: inform
     entities:
-    - time: 1 pm
+    - date: 21st
+    - time: 7 pm
   - slot_was_set:
-    - time: 1 pm
-  - action: utter_ask_date
-  - intent: inform
-    entities:
-    - date: today
+    - time: 7 pm
   - slot_was_set:
-    - date: today
+    - date: 21st
   - action: utter_confirm_reservation_data
   - intent: confirm
   - action: utter_confirm_reservation
-  - intent: end_dialog
-  - action: utter_end_dialog
-  - intent: greet
-  - action: utter_greet
-  - intent: find_restaurants
-  - action: utter_ask_city
-  - intent: inform
-    entities:
-    - city: London
+  - action: action_reset_slots
   - slot_was_set:
-    - city: London
-  - action: utter_ask_cuisine
-  - intent: inform
-  - action: utter_show_restaurant
-  - intent: end_dialog
+    - restaurant_name: null
+  - slot_was_set:
+    - city: null
+  - slot_was_set:
+    - cuisine: null
+  - slot_was_set:
+    - date: null
+  - slot_was_set:
+    - time: null
+  - intent: negate
   - action: utter_end_dialog
