--- a/domain.yml
+++ b/domain.yml
@@ -3,17 +3,15 @@ session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
-- end_dialog
-- confirm
 - inform
+- confirm
+- reserve_restaurant
+- negate
+- end_dialog
 - find_restaurants
 - greet
-- reserve_restaurant
-- get_information
-- negate
+
 entities:
-- city
-- cuisine
 - date
 - restaurant_name
 - time
@@ -38,12 +36,8 @@ responses:
   - text: Hi, how can I assist you today?
   utter_ask_restaurant_name:
   - text: At what restaurant do you want to make a reservation?
-  utter_ask_city:
-  - text: You're looking for a restaurant in which city?
   utter_ask_time:
   - text: I should book you at what time?
-  utter_ask_cuisine:
-  - text: What kind of food are you thinking of eat?
   utter_ask_date:
   - text: For what date would it be?
   utter_end_dialog:
@@ -54,9 +48,14 @@ responses:
   - text: Just to confirm, a table at {restaurant_name} at {time} of {date}. Is that correct?
   utter_confirm_reservation:
   - text: Your reservation is confirmed. Anything else?
+  utter_list_restaurants:
+  - text: Available restaurants
+  utter_list_infos:
+  - text: The available data to this restaurant is
 actions:
-- utter_ask_city
-- utter_ask_cuisine
+- action_get_infos
+- action_get_restaurants
+- action_reset_slots
 - utter_ask_date
 - utter_ask_time
 - utter_confirm_reservation
